src/objects/KS_Solucion_prescrita__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Objeto que alberga todos los productos prescritos para una OBRA, proveniente de todas las ofertas.</description>
    <fields>
        <fullName>KS_Cantidad__c</fullName>
        <label>Cantidad</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Descripcion__c</fullName>
        <formula>KS_Producto__r.KS_descripcion_corta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descripción</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Descuento_neto__c</fullName>
        <label>Descuento neto</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Instalador__c</fullName>
        <label>Dto. Instalador</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_adicional_1__c</fullName>
        <label>Dto. adicional 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_adicional_2__c</fullName>
        <label>Dto. adicional 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_base_1__c</fullName>
        <label>Dto. base 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_base_2__c</fullName>
        <label>Dto. base 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_cliente_final__c</fullName>
        <label>Dto. cliente final</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_logistico__c</fullName>
        <label>Dto. logístico</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Ficha__c</fullName>
        <label>Ficha</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Id_Oferta__c</fullName>
        <formula>KS_Oferta__r.KS_Oferta_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Oferta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nombre_producto__c</fullName>
        <formula>KS_Producto__r.KS_Nombre_producto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <label>Obra</label>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>Soluciones prescritas</relationshipLabel>
        <relationshipName>Soluciones_prescritas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KS_Oferta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oferta</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Soluciones prescritas</relationshipLabel>
        <relationshipName>Soluciones_prescritas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Precio_Neto__c</fullName>
        <label>Precio Neto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Precio__c</fullName>
        <label>Precio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Prescrito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescrito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Soluciones prescritas</relationshipLabel>
        <relationshipName>Soluciones_prescritas_producto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Serie_Gama__c</fullName>
        <label>Serie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>033</fullName>
                </value>
                <value>
                    <fullName>034</fullName>
                </value>
                <value>
                    <fullName>035</fullName>
                </value>
                <value>
                    <fullName>036</fullName>
                </value>
                <value>
                    <fullName>038</fullName>
                </value>
                <value>
                    <fullName>045</fullName>
                </value>
                <value>
                    <fullName>049</fullName>
                </value>
                <value>
                    <fullName>051</fullName>
                </value>
                <value>
                    <fullName>052</fullName>
                </value>
                <value>
                    <fullName>053</fullName>
                </value>
                <value>
                    <fullName>054</fullName>
                </value>
                <value>
                    <fullName>056</fullName>
                </value>
                <value>
                    <fullName>075</fullName>
                </value>
                <value>
                    <fullName>077</fullName>
                </value>
                <value>
                    <fullName>108</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>128</fullName>
                </value>
                <value>
                    <fullName>129</fullName>
                </value>
                <value>
                    <fullName>131</fullName>
                </value>
                <value>
                    <fullName>134</fullName>
                </value>
                <value>
                    <fullName>135</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Subserie__c</fullName>
        <label>Subserie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Subserie</valueSetName>
        </valueSet>
    </fields>
    <label>Solución prescrita</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>id solución</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Soluciones prescritas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>